fixed partner logo display on mobile

--- a/src/stylesheet/layout/_section.scss
+++ b/src/stylesheet/layout/_section.scss
@@ -111,11 +111,18 @@
     }
 
     > .profile_wrap {
+        width: 100%;
         flex-wrap: wrap;
         > .thumbnail {
-            width: 50px;
-            height: 50px;
-            background-color: yellow;
+            margin: 40px 0;
+            padding: 0 20px;
+            > a {
+                img {
+                    object-fit: contain;
+                    width: 100%;
+                    height: 100%;
+                }
+            }
         }
     }
 }
